--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #f0a5e9; /* Color de fondo del footer */
+  background-color: #d694c1; /* Color de fondo del footer */
   padding: 20px 0;
   text-align: center;
   color: #000000;
