--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #f0a5e9; /* Color de fondo del header */
+  background-color: #d694c1;
   display: flex;
   justify-content: center;
   align-items: center;
