--- a/src/app/auth/formulario/formulario.component.html
+++ b/src/app/auth/formulario/formulario.component.html
@@ -1,7 +1,20 @@
-<app-header></app-header>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="">
+ 
+</head>
+<body>
+
+<div class="container-fluid background-image-container d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f7f7f7;">
 <div class="wrapper bg-white">
     <div class="h2 text-center">Helados WOW</div>
     <div class="h4 text-muted text-center pt-2">Iniciar sesión</div>
+  <br>
+        <img src="assets/images/lex.jpg" style=" max-width: 90px; max-height: 90px;  display: block; margin: 0 auto">
+   
     <form [formGroup]="loginForm" class="pt-3">
         <div class="form-group py-2">
             <div class="input-field">  <input formControlName="email" type="text" placeholder="Correo" required class=""> </div>
@@ -29,7 +42,7 @@
         <div class="d-flex align-items-start">
             <div class="ml-auto"> <a href="#" id="forgot">Olvidó su contraseña?</a> </div>
         </div> <button (click)="login()" class="btn btn-block text-center my-3">Iniciar sesión</button>
-        <div class="text-center pt-3 text-muted">No es un miembro? <a href="#">Registrarse</a></div>
+        <div class="text-center pt-3 text-muted">No es un miembro? <a href="/crear-usuario">Registrarse</a></div>
     </form>
 </div>
 
