--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,641 +1,1 @@
-.fondo-blanco {
-  color: white;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-}
-
-.custom-img {
-  width: 50px;
-  height: 50px;
-}
-
-.btn {
-  margin: 30px;
-}
-
-.slider-container {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.img-slider {
-  width: 100%;
-  height: auto;
-}
-
-.justificado {
-  text-align: justify;
-}
-
-.img-mas-grande {
-  width: 100%;
-  height: 5%;
-  object-fit: cover;
-}
-button.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: all 0.3s linear;
-  border-radius: 10px;
-  border: 1px solid #bedbf2;
-  padding: 10px 20px;
-}
-
-button.button > svg {
-  margin-left: 5px;
-  transition: all 0.4s ease-in;
-}
-
-button.button:hover > svg {
-  font-size: 1.2em;
-  transform: translateX(6px);
-}
-
-button.button:hover {
-  box-shadow: 10px 10px 40px #d1d1d1;
-  transform: translateY(-5px);
-}
-
-.shopping-container {
-  position: relative;
-  display: inline-block;
-}
-
-.shopping.shopping2 {
-  width: 40px;
-  height: 40px;
-  background-color: #3567a8;
-  margin-right: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  border-radius: 50%;
-  text-align: center;
-  transition: 0.3s;
-  position: relative;
-}
-
-.common-title4 h1 span {
-  color: #76459d;
-}
-.common-title4 h2 span {
-  color: #eb636b;
-}
-
-.container .common-title-area.padding-50 h3 {
-  color: #df4a64;
-}
-
-.common-title-area.padding-50 h2 span {
-  color: #df4a64; /* Cambia este valor al color deseado */
-}
-
-.common-title4 h3 {
-  color: #eb636b;
-}
-.info-area {
-  position: relative;
-}
-.info-area img {
-  width: inherit;
-}
-.info-area .info-shapes .info-s-1 {
-  position: absolute;
-  left: 0;
-  top: 3%;
-  transform: rotate(-171deg);
-}
-.info-area .info-shapes .info-s-2 {
-  position: absolute;
-  right: 0;
-  top: 3%;
-}
-.single-info {
-  border: 1px solid #e1e1e1;
-  padding: 15px 20px;
-  border-radius: 5px;
-  height: 100%;
-  background: #fff;
-  margin-bottom: 30px;
-}
-@media (max-width: 767.98px) {
-  .single-info {
-    height: inherit;
-  }
-}
-.single-info .info-img {
-  margin-right: 10px;
-  margin-bottom: 20px;
-}
-.single-info .info-img img {
-  width: inherit;
-}
-.single-info .info-content p {
-  padding-top: 10px;
-}
-.meddy-deep-bg {
-  background-color: #ffc6cd !important;
-}
-.purple-lite-bg {
-  background-color: #ffdcfd !important;
-}
-.item-bounce {
-  -webkit-animation: bounce 3s infinite ease-in-out;
-  -o-animation: bounce 3s infinite ease-in-out;
-  -ms-animation: bounce 3s infinite ease-in-out;
-  -moz-animation: bounce 3s infinite ease-in-out;
-  animation: bounce 3s infinite ease-in-out;
-}
-@keyframes bounce {
-  0% {
-    transform: translateY(-5px);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(-5px);
-  }
-}
-.meddy-bg {
-  background-color: #fcdbb3 !important;
-}
-
-.common-title4 h3 {
-  font-family: "Caveat", cursive;
-  font-size: 36px;
-  line-height: 43.2px;
-  text-align: center;
-  letter-spacing: normal;
-}
-
-.common-title4 h2 {
-  font-family: "Poppins", sans-serif;
-  font-size: 48px;
-  line-height: 57.6px;
-  text-align: center;
-  letter-spacing: normal;
-}
-
-/* Establecer la imagen de fondo para la clase .info-area */
-.info-area {
-  background-image: url("../../assets/images/j.jpg"),
-    url("../../assets/images/fondo3.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#restaurant-section {
-  position: relative;
-  background-image: url("../../assets/images/fondo3.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 20px;
-}
-
-#restaurant-section > .row.bg-light {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 30px;
-  border-radius: 10px;
-}
-
-.menu-area.home2-menu-area.padding-bottom-10 {
-  position: relative;
-}
-
-.menu-area.home2-menu-area.padding-bottom-10:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("/assets/images/fondo0.jpg");
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-}
-
-.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-
-  background: #df4a64;
-  visibility: visible;
-  opacity: 0.9;
-  z-index: -1;
-  transition: 0.5s;
-}
-.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav h6 {
-  color: #fff;
-  transition: 0.5s;
-}
-.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav .g-s-4 {
-  position: absolute;
-  bottom: 0;
-  right: -26px;
-  opacity: 1;
-  visibility: visible;
-  transition: 0.5s;
-}
-.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav .g-s-4 img {
-  width: 72%;
-}
-.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav .g-s-5 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 1;
-  visibility: visible;
-  transition: 0.5s;
-}
-.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav .g-s-5 img {
-  width: 72%;
-}
-.menu-area .menu-items-wrapper {
-  box-shadow: 0px 0px 10px 0px rgba(39, 53, 160, 0.1);
-  position: relative;
-}
-.menu-area .menu-items-wrapper.menu-custom-padding {
-  padding: 70px 50px;
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .menu-area .menu-items-wrapper .menu-i-shapes {
-    display: none;
-  }
-}
-@media (max-width: 767.98px) {
-  .menu-area .menu-items-wrapper .menu-i-shapes {
-    display: none;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .menu-area .menu-nav-wrapper .nav {
-    justify-content: center;
-  }
-}
-@media (max-width: 767.98px) {
-  .menu-area .menu-nav-wrapper .nav {
-    justify-content: center;
-  }
-}
-
-.menu-area .menu-items-wrapper .menu-i-shapes img {
-  width: 75px;
-}
-.menu-area .menu-items-wrapper .menu-i-shapes .mis-1 {
-  position: absolute;
-  left: 31%;
-  bottom: 12%;
-}
-.menu-area .menu-items-wrapper .menu-i-shapes .mis-2 {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-.menu-area .menu-items-wrapper .menu-i-shapes .mis-3 {
-  position: absolute;
-  right: 37%;
-  top: 35%;
-}
-.menu-area .menu-items-wrapper .menu-i-shapes .mis-4 {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-.menu-area .menu-items-wrapper hr {
-  border: 1px dashed #df4a64;
-}
-.menu-area .menu-items-wrapper a.btn {
-  text-align: center;
-}
-.menu-area .menu-items-wrapper a.btn:hover {
-  border: 1px solid #df4a64;
-  background: transparent;
-  color: ea899a;
-}
-.single-menu-nav {
-  width: 150px;
-  height: 150px;
-  padding: 25px 30px;
-  border: 1px solid #e6e6e6;
-  border-radius: 5px;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  transition: 0.5s;
-  cursor: pointer;
-}
-.single-menu-nav .menu-img {
-  position: static;
-  z-index: 1;
-}
-.single-menu-nav h6 {
-  position: static;
-  z-index: 1;
-  transition: 0.5s;
-}
-.single-menu-nav .g-s-4 {
-  position: absolute;
-  bottom: 0;
-  right: -26px;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.5s;
-}
-.single-menu-nav .g-s-4 img {
-  width: 72%;
-}
-.single-menu-nav .g-s-5 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.5s;
-}
-.single-menu-nav .g-s-5 img {
-  width: 72%;
-}
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .single-menu-nav {
-    width: 120px;
-    height: 130px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .single-menu-nav {
-    width: 120px;
-    height: 130px;
-  }
-}
-@media (max-width: 767.98px) {
-  .single-menu-nav {
-    width: 120px;
-    height: 130px;
-  }
-}
-.single-menu-nav .menu-img img {
-  width: 80%;
-}
-.single-menu-nav::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  opacity: 0;
-  background: #df4a64;
-  transition: 0.5s;
-}
-.single-menu-nav:hover .g-s-4 {
-  opacity: 1;
-  visibility: visible;
-}
-.single-menu-nav:hover .g-s-5 {
-  opacity: 1;
-  visibility: visible;
-}
-.single-menu-nav:hover::after {
-  visibility: visible;
-  opacity: 0.9;
-  z-index: -1;
-}
-.single-menu-nav:hover h6 {
-  color: #fff;
-}
-.single-menu-item {
-  padding: 20px;
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .single-menu-item {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-@media (max-width: 767.98px) {
-  .single-menu-item {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .single-menu-item {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.single-menu-item .menu-img {
-  margin-right: 20px;
-}
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .single-menu-item .menu-img {
-    margin-right: 0;
-  }
-}
-@media (max-width: 991.98px) {
-  .single-menu-item .menu-img {
-    margin-right: 0;
-  }
-}
-.single-menu-item .menu-img img {
-  width: 100px;
-  max-height: 100px;
-  margin-right: 20px;
-  border-radius: 58% 42% 49% 51% / 63% 55% 45% 37%;
-}
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .single-menu-item .menu-content {
-    text-align: center;
-    margin-top: 20px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .single-menu-item .menu-content {
-    text-align: center;
-    margin-top: 20px;
-  }
-}
-@media (max-width: 767.98px) {
-  .single-menu-item .menu-content {
-    text-align: center;
-    margin-top: 20px;
-  }
-}
-.single-menu-item .menu-content h5 {
-  font-weight: 600;
-}
-.single-menu-item .menu-content h5 a {
-  color: #2a435d;
-  transition: 0.3s;
-}
-.single-menu-item .menu-content h5 a:hover {
-  color: #df4a64;
-}
-.single-menu-item .menu-content p {
-  text-transform: capitalize;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.single-menu-item .menu-content span {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-size: 18px;
-  color: #2a435d;
-  text-transform: capitalize;
-}
-.single-menu-item .menu-content .del {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-.home2-menu-area {
-  position: relative;
-  overflow: hidden;
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .home2-menu-area .menu-shapes {
-    display: none;
-  }
-}
-@media (max-width: 767.98px) {
-  .home2-menu-area .menu-shapes {
-    display: none;
-  }
-}
-.home2-menu-area .menu-shapes img {
-  width: inherit;
-}
-.home2-menu-area .menu-shapes .ds-1 {
-  position: absolute;
-  right: -1%;
-  bottom: 20%;
-}
-.home2-menu-area .menu-shapes .ds-2.small-image{
-  position: absolute;
-  right: -15%; 
-  bottom: 70%; 
-  width: 20px;
-}
-.home2-menu-area .menu-shapes .ds-3 {
-  position: absolute;
-  right: 1%;
-  top: 10%;
-}
-.home2-menu-area .menu-shapes .ds-4 {
-  position: absolute;
-  left: 1%;
-  top: 10%;
-  z-index: -1;
-}
-.home2-menu-area .menu-shapes .ds-5 {
-  position: absolute;
-  left: 0%;
-  bottom: 34%;
-}
-.home2-menu-area #nav-tabContent .nav-link.active .single-menu-nav::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: #fff6f6;
-  visibility: visible;
-  opacity: 0.9;
-  z-index: -1;
-  transition: 0.5s;
-}
-.home2-menu-area #nav-tabContent .nav-link.active .single-menu-nav h6 {
-  color: #fff;
-  transition: 0.5s;
-}
-.home2-menu-area #nav-tabContent .nav-link.active .single-menu-nav .g-s-4 {
-  position: absolute;
-  bottom: 0;
-  right: -26px;
-  opacity: 1;
-  visibility: visible;
-  transition: 0.5s;
-}
-.home2-menu-area #nav-tabContent .nav-link.active .single-menu-nav .g-s-4 img {
-  width: 72%;
-}
-.home2-menu-area #nav-tabContent .nav-link.active .single-menu-nav .g-s-5 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 1;
-  visibility: visible;
-  transition: 0.5s;
-}
-.home2-menu-area #nav-tabContent .nav-link.active .single-menu-nav .g-s-5 img {
-  width: 72%;
-}
-.home2-menu-area .menu-items-wrapper {
-  box-shadow: inherit;
-}
-.home2-menu-area .menu-items-wrapper .menu-i-shapes .mis-3 {
-  position: absolute;
-  right: 32%;
-  top: 35%;
-  width: 58px;
-}
-.home2-menu-area .menu-items-wrapper .single-menu-item {
-  border: 1px solid #e6e6e6;
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 20px 10px;
-  transition: 0.3s;
-  margin-bottom: 30px;
-}
-.home2-menu-area .menu-items-wrapper .single-menu-item .menu-content h6 a {
-  color: #2a435d;
-}
-.home2-menu-area
-  .menu-items-wrapper
-  .single-menu-item
-  .menu-content
-  h6
-  a:hover {
-  color: #eb636b;
-}
-.home2-menu-area .menu-items-wrapper .single-menu-item .menu-content span {
-  font-weight: 700;
-}
-.home2-menu-area .menu-items-wrapper .single-menu-item:hover {
-  box-shadow: 0px 25px 60px 0px rgba(0, 21, 100, 0.1);
-  border: 1px solid transparent;
-}
-
-.nav-link {
-  cursor: pointer;
-}
-
-.tab-content {
-  display: block;
-}
-
-.tab-content.active {
-  display: block;
-}
+#restaurant-section,.info-area{background-size:cover;background-position:center}.nav-link,button.button{cursor:pointer}.fondo-blanco{color:#fff}.container{display:flex;flex-direction:column}.custom-img{width:50px;height:50px}.btn{margin:30px}.slider-container{margin:0 auto;display:flex;justify-content:center;align-items:center}.img-slider{width:100%;height:auto}.justificado{text-align:justify}.img-mas-grande{width:100%;height:5%;object-fit:cover}button.button{display:flex;align-items:center;justify-content:center;transition:.3s linear;border-radius:10px;border:1px solid #bedbf2;padding:10px 20px}button.button>svg{margin-left:5px;transition:.4s ease-in}button.button:hover>svg{font-size:1.2em;transform:translateX(6px)}button.button:hover{box-shadow:10px 10px 40px #d1d1d1;transform:translateY(-5px)}.shopping.shopping2{width:40px;height:40px;background-color:#3567a8;margin-right:10px;display:flex;align-items:center;justify-content:center;color:#fff;border-radius:50%;text-align:center;transition:.3s;position:relative}.common-title4 h1 span{color:#76459d}.common-title4 h2 span,.common-title4 h3{color:#eb636b}.common-title-area.padding-50 h2 span,.container .common-title-area.padding-50 h3{color:#df4a64}.info-area{background-image:url("../../assets/images/j.jpg"),url("../../assets/images/fondo3.png");background-repeat:no-repeat}#restaurant-section{position:relative;background-image:url("../../assets/images/fondo3.png");background-repeat:no-repeat;padding:20px}#restaurant-section>.row.bg-light{background-color:rgba(255,255,255,.8);padding:30px;border-radius:10px}.menu-area.home2-menu-area.padding-bottom-10:before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-image:url("/assets/images/fondo0.jpg");background-size:cover;background-position:center;z-index:-1}.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav::after{position:absolute;content:"";width:100%;height:100%;top:0;left:0;background:#df4a64;visibility:visible;opacity:.9;z-index:-1;transition:.5s}.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav h6{color:#fff;transition:.5s}.menu-area .menu-items-wrapper hr{border:1px dashed #df4a64}.menu-area .menu-items-wrapper a.btn{text-align:center}.menu-area .menu-items-wrapper a.btn:hover{border:1px solid #df4a64;background:0 0;color:ea899a}.single-menu-nav{width:150px;height:150px;padding:25px 30px;border:1px solid #e6e6e6;border-radius:5px;position:relative;display:flex;flex-wrap:wrap;align-items:center;justify-content:center;transition:.5s;cursor:pointer}.single-menu-nav::after{position:absolute;content:"";width:100%;height:100%;top:0;left:0;visibility:hidden;opacity:0;background:#df4a64;transition:.5s}
