Error resulto de carga Nav Bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
+
+
 <router-outlet></router-outlet>
+
+<script>
+ 
+    // Ejemplo de cómo incluir tu script de smooth-scroll
+    var smoothScrollScript = document.createElement('script');
+    smoothScrollScript.src = '/assets/js/vendor/smooth-scroll.js';
+    document.body.appendChild(smoothScrollScript);
+
+   
+  
+</script>
