--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -216,20 +216,7 @@
 
   <!-- menu-area -->
   <section class="menu-area home2-menu-area padding-bottom-10">
-    <div class="menu-shapes">
-      <span class="ds-1"><img src="assets/images/shapes/34.png" alt="" /></span>
-      <span class="ds-2 item-bounce"
-        ><img src="assets/images/cam.jpg" alt="" /></span>
-      <span class="ds-3"
-        ><img src="assets/images/shapes/donar.png" alt=""
-      /></span>
-      <span class="ds-4 item-bounce"
-        ><img src="assets/images/shapes/triple.png" alt=""
-      /></span>
-      <span class="ds-5"
-        ><img src="assets/images/shapes/scatter.png" alt=""
-      /></span>
-    </div>
+    
     <div class="container">
       <div class="common-title-area padding-50 wow fadeInLeft">
         <h3>sabores</h3>
@@ -257,12 +244,7 @@
                       <img src="assets/images/fresa.jpg" alt="" />
                     </div>
                     <h6>Fresa</h6>
-                    <span class="g-s-4"
-                      ><img src="assets/images/shapes/10.png" alt=""
-                    /></span>
-                    <span class="g-s-5"
-                      ><img src="assets/images/shapes/14.png" alt=""
-                    /></span>
+                    
                   </div>
                 </div>
               </li>
@@ -283,12 +265,8 @@
                       <img src="assets/images/oreo.jpg" alt="" />
                     </div>
                     <h6>Oreo</h6>
-                    <span class="g-s-4"
-                      ><img src="assets/images/shapes/10.png" alt=""
-                    /></span>
-                    <span class="g-s-5"
-                      ><img src="assets/images/shapes/14.png" alt=""
-                    /></span>
+                   
+                    
                   </div>
                 </div>
               </li>
@@ -310,11 +288,11 @@
                     </div>
                     <h6>Piña</h6>
                     <span class="g-s-4"
-                      ><img src="assets/images/shapes/10.png" alt=""
-                    /></span>
+                      >
+                    </span>
                     <span class="g-s-5"
-                      ><img src="assets/images/shapes/14.png" alt=""
-                    /></span>
+                      >
+                    </span>
                   </div>
                 </div>
               </li>
@@ -335,12 +313,7 @@
                       <img src="assets/images/chocolate.jpg" alt="" />
                     </div>
                     <h6>Chocolate</h6>
-                    <span class="g-s-4"
-                      ><img src="assets/images/shapes/10.png" alt=""
-                    /></span>
-                    <span class="g-s-5"
-                      ><img src="assets/images/shapes/14.png" alt=""
-                    /></span>
+                   
                   </div>
                 </div>
               </li>
@@ -361,12 +334,7 @@
                       <img src="assets/images/cafe.jpg" alt="" />
                     </div>
                     <h6>Café</h6>
-                    <span class="g-s-4"
-                      ><img src="assets/images/shapes/10.png" alt=""
-                    /></span>
-                    <span class="g-s-5"
-                      ><img src="assets/images/shapes/14.png" alt=""
-                    /></span>
+                   
                   </div>
                 </div>
               </li>
@@ -389,8 +357,8 @@
                     <h6>Extra Menu</h6>
                     
                     <span class="g-s-5"
-                      ><img src="assets/images/shapes/14.png" alt=""
-                    /></span>
+                      >
+                    </span>
                   </div>
                 </div>
               </li>
@@ -411,9 +379,7 @@
         >
           <div class="menu-items-wrapper padding-50">
             <div class="menu-i-shapes">
-              <span class="mis-3"
-                ><img src="assets/images/shapes/7.png" alt=""
-              /></span>
+             
             </div>
             <!-- first-row -->
             <div class="row">
@@ -585,8 +551,8 @@
           <div class="menu-items-wrapper padding-50">
             <div class="menu-i-shapes">
               <span class="mis-3"
-                ><img src="assets/images/shapes/7.png" alt=""
-              /></span>
+                >
+              </span>
             </div>
             <!-- first-row -->
             <div class="row">
@@ -667,8 +633,7 @@
           <div class="menu-items-wrapper padding-50">
             <div class="menu-i-shapes">
               <span class="mis-3"
-                ><img src="assets/images/shapes/7.png" alt=""
-              /></span>
+                ></span>
             </div>
             <!-- first-row -->
             <div class="row">
@@ -737,8 +702,8 @@
           <div class="menu-items-wrapper padding-50">
             <div class="menu-i-shapes">
               <span class="mis-3"
-                ><img src="assets/images/shapes/7.png" alt=""
-              /></span>
+                >
+              </span>
             </div>
             <!-- first-row -->
             <div class="row">
@@ -768,7 +733,7 @@
           <div class="menu-items-wrapper padding-50">
             <div class="menu-i-shapes">
               <span class="mis-3"
-                ><img src="assets/images/shapes/7.png" alt=""
+                >
               /></span>
             </div>
             <!-- first-row -->
@@ -1023,21 +988,7 @@
     </div>
   </div>
 
-  <script src="/assets/js/vendor/jquery-2.2.4.min.js"></script>
-  <script src="/assets/js/vendor/bootstrap.min.js"></script>
-  <script src="/assets/js/vendor/jquery.meanmenu.min.js"></script>
-  <script src="/assets/js/vendor/jquery.magnific-popup.min.js"></script>
-  <script src="/assets/js/vendor/slick.min.js"></script>
-  <script src="/assets/js/vendor/counterup.min.js"></script>
-  <script src="/assets/js/vendor/countdown.js"></script>
-  <script src="/assets/js/vendor/waypoints.min.js"></script>
-  <script src="/assets/js/vendor/jquery-ui.js"></script>
-  <script src="/assets/js/vendor/isotope.pkgd.min.js"></script>
-  <script src="/assets/js/vendor/easing.min.js"></script>
-  <script src="/assets/js/vendor/wow.min.js"></script>
-  <script src="/assets/js/main.js"></script>
-  <script
-    type="text/javascript"
-    src="/assets/js/vendor/smooth-scroll.js"
-  ></script>
+  
+
+  
 </div>
